@@ -1,10 +1,13 @@
+/*
+ * $Id: sue.c,v 1.2 2000/12/28 13:37:03 tom Exp $
+ */
+#include	<stdlib.h>
+#include	<unistd.h>	/* may define _POSIX_SAVED_IDS */
 #include	<stdio.h>
 #include	<string.h>
 #include	<pwd.h>
-extern	char	*getenv();
 
-main(argc, argv)
-char	*argv[];
+int main(int argc, char *argv[])
 {
 	char	home[BUFSIZ],
 		shell[BUFSIZ],
@@ -12,8 +15,19 @@ char	*argv[];
 		*default_shell = "/bin/sh";
 	register struct	passwd *q;
 
+#ifndef _POSIX_SAVED_IDS
+	/*
+	 * This works _everywhere_ except for glibc 2.1.3, which is broken.
+	 */
 	(void)setuid(geteuid());
 	(void)setgid(getegid());
+#else
+	/*
+	 * For the moment (2000/12/28), no one's broken the "old" behavior.
+	 */
+	(void)setreuid(geteuid(), geteuid());
+	(void)setregid(getegid(), getegid());
+#endif
 	strcpy(home,  "HOME=");
 	strcpy(shell, "SHELL=");
 	strcpy(user,  "USER=");
