@@ -1,3 +1,7 @@
+2000-12-28  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/sue/sue.c: fix for broken glibc
+
 2000-11-10  dickey@clark.net
 
 	* src/newpath/newpath.c:
